feat: allow to show game

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Planning Poker by ReactJS</title>
-    <link rel="stylesheet" href="./static/css/app.css">
+    <link rel="stylesheet" href="/static/css/app.css">
   </head>
   <body>
     <div id="root"></div>
