--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </body>
 </html>
