chore: use parcel as bundler

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Planning Poker by ReactJS</title>
-    <link rel="stylesheet" href="/static/css/app.css">
+    <link rel="stylesheet" href="./css/root.css">
+    <script type="module" src="/src/ts/index.tsx" />
   </head>
   <body>
     <div id="root"></div>
