--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div id="root"></div>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> </div>
     <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <script type="module" src="/src/ts/index.tsx"></script>
   </body>
 </html>
