--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/root.css">
+    <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
   <body>
     <div id="root"></div>
