--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="z-10"></div>
+    <div id="notification-holder" class="absolute w-48 h-1/3 right-4 bottom-4 overflow-hidden"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
