--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
   <head>
     <meta charset="UTF-8">
     <title>Planning Poker by ReactJS</title>
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/css/root.css">
     <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
-  <body>
+  <body class="overflow-hidden w-full h-full">
     <div id="root" class="z-10"></div>
     <div id="notification-holder" class="absolute w-48 h-1/3 right-4 bottom-4 overflow-hidden"></div>
     <script type="module" src="/src/index.tsx"></script>
