--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/root.css">
     <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
-  <body class="overflow-hidden w-full h-full">
-    <div id="root" class="z-10"></div>
-    <div id="notification-holder" class="absolute w-48 h-1/3 right-4 bottom-4 overflow-hidden"></div>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
